--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ gems: [jekyll-paginate]
 
 
 # Markdown settings
-# replace redcarpet to kramdown,
+# replace redcarpet to kramdownwy,
 # although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
 # document: http://jekyllrb.com/docs/configuration/#kramdown
 markdown: kramdown
