--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ friends: [
         title: "wykxwyc's Blog",
         href: "http://wykxwyc.github.io"
     },{
-        title: "It helps SEO",
+        title: "",
         href: "#"
     }
 ]
