--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "homepage": "http://wykxwyc.github.io",
     "author": "wykxwyc",
     "devDependencies": {
-        "grunt": "~0.4.5",
+        "grunt": ">=1.3.0",
         "grunt-contrib-less": "~0.11.4",
         "grunt-contrib-watch": "~0.6.1",
         "grunt-banner": "~0.2.3",
         "grunt-contrib-uglify": "~0.5.1"
+    },
+    "dependencies": {
+        "grunt": ">=1.3.0"
     },
     "repository": {
         "type": "git",
